Fixed container height overflow issue

--- a/src/stylesheets/layouts/_app.scss
+++ b/src/stylesheets/layouts/_app.scss
@@ -1,6 +1,6 @@
 .container{
     display: flex;
-    height: 100vh;
+    min-height: 100vh;
     @media (max-width: 480px){
         display: block;
         height: auto;
